--- a/docs/rfc/rfc-5-stake-delegation-specification.adoc
+++ b/docs/rfc/rfc-5-stake-delegation-specification.adoc
@@ -158,8 +158,7 @@ the first order.
 3. The contract receives the _delegation order_ and verifies the following (if
 any condition is unfulfilled, processing aborts):
   * _delegation order_ is signed by the owner declared in the delegation order,
-  * _delegation order_ is signed by the operator declared in the delegation
-    order,
+  * _owner_ address is signed by the _operator_,
   * _magpie_ address is set,
   * _operator_ is not involved in another active delegating contract,
   * amount of delegated tokens is lower or equal to the owner staked tokens.
