Improve delegation agreement description

--- a/docs/rfc/rfc-5-stake-delegation-specification.adoc
+++ b/docs/rfc/rfc-5-stake-delegation-specification.adoc
@@ -148,12 +148,13 @@ The contract should also have the following discrete pieces of functionality:
 1. The _owner_ chooses the number of tokens to delegate, _operator_, and
 _magpie_ and creates a _delegation order_ containing this information.
 
-2. Both the _owner_ and _operator_ agree on the _delegation order_.
-Signature of the _owner_ address obtained from the _operator_ is enough to let
-the owner to delegate the tokens. Operator does not have to agree on the number
-of tokens delegated and operator's agreement on delegation is given in perpetuity
-_owner_ may transfer more tokens to the contract or not delegate all tokens in
-the first order.
+2. The _owner_ provides to the contract a signature of his address, signed by
+the _operator_. This proofs that the _operator_ is willing to operate on behalf
+of the _owner. It is enough to let the _owner_ to delegate the tokens to the
+_operator_. Operator does not have to agree on the number of tokens delegated
+and operator's agreement on delegation is given in perpetuity _owner_ may
+transfer more tokens to the contract or not delegate all tokens in the first
+order.
 
 3. The contract receives the _delegation order_ and verifies the following (if
 any condition is unfulfilled, processing aborts):
