Rename "backend" and "frontend" to "operator" and "service" contract

--- a/docs/rfc/rfc-9-upgradeable-contract-components.adoc
+++ b/docs/rfc/rfc-9-upgradeable-contract-components.adoc
@@ -8,7 +8,7 @@ toc::[]
 
 == Background
 
-Stakers in the Keep network use work contracts to perform work for applications.
+Stakers in the Keep network use work contracts to perform work for customers.
 Work contracts make the off-chain work of stakers
 available to on-chain applications
 using a system of rewards and punishments to enforce correct behavior.
@@ -62,12 +62,13 @@ would lead customers to prefer the old version with established state.
 
 == Proposal
 
-The eternal storage pattern can be implemented
-on individually authorizable work contracts
-by dividing the contracts into a security-critical back-end
-and a front-end which provides services to customers.
-A single front-end contract
-can abstract over multiple different back-end contracts,
+Customer continuity can be reconciled with staker sovereignty
+by dividing work contracts into
+_operator contracts_ which handle incentive-critical operations with stakers;
+and _service contracts_ which use _operator contracts_
+to provide services to customers.
+A single _service contract_
+can abstract over multiple different _operator contracts_,
 permitting secure upgrades with reduced or minimal disruption to customers.
 
 === Goal
@@ -85,89 +86,89 @@ and it should deal gracefully with major changes.
 For each service provided on the Keep network,
 the security-critical components are identified
 and separated from the rest of the contract
-as a _back-end_ contract.
-The _front-end_ contract
-can abstract over multiple different versions of the back-end,
+as a _operator contract_ contract.
+The _service contract_ contract
+can abstract over multiple different versions of the operator contract,
 presenting a unified interface to customers.
 Behind that interface,
-security-critical elements are delegated to back-end contracts.
+security-critical elements are delegated to operator contracts.
 
-==== Back-end
+==== operator contract
 
-The back-end contracts handle all operations
+The operator contracts handle all operations
 that may have an impact on staked tokens.
 
-Each back-end contract is an independent "microservice",
+Each operator contract is an independent "microservice",
 keeping its own state on security-critical data.
-The backend contracts provide simplified functionality
+The operator contracts provide simplified functionality
 that is stripped to the minimum necessary
 for security and correct incentives.
 
-Each backend contract is associated with one or more front-end contracts
-the backend contract provides functionality for.
-Only these specified frontend contracts
-may use the backend contract's interface.
+Each operator contract is associated with one or more service contracts
+the operator contract provides functionality for.
+Only these specified service contracts
+may use the operator contract's interface.
 When the interface is designed,
-the frontend contract must be treated as untrusted
-and the backend must maintain correctness
-regardless of the frontend input.
+the service contract must be treated as untrusted
+and the operator contract must maintain correctness
+regardless of the service contract input.
 
-When a backend contract performs a service,
+When a operator contract performs a service,
 it is paid for the service provided.
-The payment is distributed according to the backend's own rules.
+The payment is distributed according to the operator contract's own rules.
 
-==== Front-end
+==== service contract
 
-Front-end contracts use the basic functionality
-performed by backend contracts,
+service contracts use the basic functionality
+performed by operator contracts,
 to provide useful services to customers.
 
-Front-end contracts receive requests for services from customers,
-and divide the provided service to backend and frontend components.
+service contracts receive requests for services from customers,
+and divide the provided service to operator contract and service contract components.
 Elements that are critical for security and incentives
-are delegated to a backend contract,
-while other parts of the work are performed in the frontend.
+are delegated to a operator contract,
+while other parts of the work are performed in the service contract.
 
-Frontend contracts can use
-multiple different versions of back-end contracts
-to perform the backend functions.
-The frontend keeps shared state which is not security-critical.
+service contracts can use
+multiple different versions of operator contracts
+to perform the operator contract functions.
+The service contract keeps shared state which is not security-critical.
 
-==== Back-end upgrades
+==== operator contract upgrades
 
-A backend contract is upgraded by deploying a new version,
-and adding it to the available backends of a frontend contract.
-As stakers authorize the new backend,
-the frontend can gradually migrate
-to use the new backend over older versions.
+A operator contract is upgraded by deploying a new version,
+and adding it to the available operator contracts of a service contract.
+As stakers authorize the new operator contract,
+the service contract can gradually migrate
+to use the new operator contract over older versions.
 
-Backend contracts can be upgraded
-without losing frontend contract state,
-but critical state is held within the backend contract
+operator contracts can be upgraded
+without losing service contract state,
+but critical state is held within the operator contract
 and cannot be migrated.
 
-==== Front-end upgrades
+==== service contract upgrades
 
-Because backend contracts are designed
-to be independent of frontend contract security and correctness,
-there is much more leeway to upgrade frontends.
+Because operator contracts are designed
+to be independent of service contract security and correctness,
+there is much more leeway to upgrade service contracts.
 
-Frontend contracts can be directly upgradeable,
+service contracts can be directly upgradeable,
 e.g. with the eternal storage pattern;
 they may be immutable,
-only accepting new backend versions;
+only accepting new operator contract versions;
 or they may implement a similar pattern
 in the direction of customers,
 unifying core functionality
 between immutable public interface contracts.
 
-Because backend contracts can serve multiple frontends,
-immutable frontend contracts can be upgraded
-by deploying the new frontend version,
-along with a new backend version
-which can serve both the new and the old frontend.
-The old frontend can migrate work onto the new backend,
-remaining perfectly functional while the new frontend is spun up.
+Because operator contracts can serve multiple service contracts,
+immutable service contracts can be upgraded
+by deploying the new service contract version,
+along with a new operator contract version
+which can serve both the new and the old service contract.
+The old service contract can migrate work onto the new operator contract,
+remaining perfectly functional while the new service contract is spun up.
 
 ==== Staking contract upgrades
 
@@ -181,10 +182,10 @@ and suffering the associated opportunity cost,
 but staking partial amounts can mitigate the impact
 as overall network revenue is not expected to change.
 
-Each backend contract needs to identify
+Each operator contract needs to identify
 which staking contracts it accepts.
 When a new staking contract is deployed,
-all backend contracts need to be upgraded
+all operator contracts need to be upgraded
 to a version recognizing the new staking contract,
 either exclusively or in addition to the old one.
 When a sufficient amount of time has elapsed
@@ -193,13 +194,13 @@ support for the old staking contract can be dropped.
 
 === Limitations
 
-Untrusted frontend contracts mean
-that security-critical state must be kept in the backend.
+Untrusted service contracts mean
+that security-critical state must be kept in the operator contract.
 If the network service has complex security needs,
-the backend may have to implement most of the work logic.
+the operator contract may have to implement most of the work logic.
 
-Security-critical state cannot be migrated between backends;
-a new backend has to start from a blank slate.
+Security-critical state cannot be migrated between operator contracts;
+a new operator contract has to start from a blank slate.
 Inherently long-running operations
 present a limit to how rapidly the system can be upgraded.
 
@@ -212,10 +213,10 @@ that have been created using random sortition
 from all eligible and active stakers.
 Rewards and punishments are used to incentivize correct behavior.
 
-To split the random beacon into a frontend-backend design,
+To split the random beacon into a service contract-operator contract design,
 the security-critical elements need to be identified.
 
-In this case the backend needs to handle
+In this case the operator contract needs to handle
 group creation and expiration,
 BLS signature verification,
 and incentives.
@@ -226,19 +227,19 @@ calling callbacks;
 and requesting the creation of new groups
 are responsibilities that are not critical for beacon integrity
 from the perspective of the stakers.
-These can be performed by the front-end
+These can be performed by the service contract
 without individual staker authorization of upgrades.
 
-==== Back-end
+==== operator contract
 
-The back-end for the random beacon
-provides the following interface to the front-end:
+The operator contract for the random beacon
+provides the following interface to the service contract:
 
 `create_group(payment)`::
-Create a new group when requested by the front-end,
+Create a new group when requested by the service contract,
 selecting members using pseudorandom sortition,
 and performing DKG.
-The back-end does not accept input from the front-end,
+The operator contract does not accept input from the service contract,
 but instead uses its own pseudorandom seed,
 to ensure that group composition cannot be manipulated.
 `payment` must exceed a minimum amount
@@ -251,84 +252,84 @@ Once generated, use `payment` to reward stakers.
 `payment` must exceed a set minimum value
 that covers necessary gas fees.
 When the entry is created,
-the back-end calls the front-end contract with the new entry,
+the operator contract calls the service contract with the new entry,
 using `entry_id` to identify the entry.
 
 Behind this interface,
-the back-end contract tracks its own groups, their members
+the operator contract tracks its own groups, their members
 and their threshold public keys.
-The front-end contract trusts the back-end contract
+The service contract trusts the operator contract
 to only provide valid entries when given specific inputs.
-Alternatively the back-end could provide
+Alternatively the operator contract could provide
 the associated public key so the entry can be validated,
-but even then the back-end needs to be trusted
+but even then the operator contract needs to be trusted
 to provide a public key corresponding to a random valid group.
 
-==== Front-end
+==== service contract
 
-The front-end for the random beacon
-handles customer-facing features and ties the back-ends together.
-The interface of the front-end towards the back-end is:
+The service contract for the random beacon
+handles customer-facing features and ties the operator contracts together.
+The interface of the service contract towards the operator contract is:
 
 `group_created(n_groups)`::
 The call to `create_group()` has finished
 (successfully or unsuccessfully)
 and expired groups have been removed.
-The backend now has `n_groups` active.
+The operator contract now has `n_groups` active.
 
 `entry_created(entry_id, entry)`::
-The previous call for the backend to `sign(entry_id, ...)`
+The previous call for the operator contract to `sign(entry_id, ...)`
 completed successfully,
 resulting in the new `entry`.
 
-The front-end keeps a list of back-ends
+The service contract keeps a list of operator contracts
 along with the number of active groups in each.
 
 When receiving a request,
-the front-end determines what values should be
+the service contract determines what values should be
 the group selection input
 and the signing input.
-The group selection input is used to select a backend,
+The group selection input is used to select a operator contract,
 weighted by the number of active groups on each,
 to serve the request.
 
-When the backend is determined,
+When the operator contract is determined,
 the group selection input and signing input are passed to it
 along with an appropriate payment.
-When the backend returns a valid entry with `entry_created(...)`,
-the front-end stores it and calls the customer-specified callback.
+When the operator contract returns a valid entry with `entry_created(...)`,
+the service contract stores it and calls the customer-specified callback.
 
 If a new group should be created,
-the frontend determines which backend should create one
+the service contract determines which operator contract should create one
 (the most recent one, or a random one weighted by recent-ness),
-and calls `create_group()` on the selected backend
+and calls `create_group()` on the selected operator contract
 with an appropriate payment.
-Once the backend has finished DKG and expired old groups,
+Once the operator contract has finished DKG and expired old groups,
 it returns the new number of active groups using `group_created(n_groups)`.
 
-Unlike the backend which needs to maintain integrity
+Unlike the operator contract which needs to maintain integrity
 for arbitrary, malicious inputs,
-the frontend relies heavily on trusting the backend contracts.
-This is acceptable because the back-ends are known, unchangeable code,
-and the front-end only has access to what customers have paid for entries;
-boycotting a compromised or malfunctioning frontend
+the service contract relies heavily on trusting the operator contracts.
+This is acceptable because the operator contracts are known, unchangeable code,
+and the service contract only has access to what customers have paid for entries;
+boycotting a compromised or malfunctioning service contract
 and deploying a new one
 is sufficient to mitigate attacks or errors.
 
 == Future Work
 
-An exact architecture for front-end contract upgrades
+An exact architecture for service contract upgrades
 is not specified.
-The front-end upgrade process should be resilient to minor compromise
+The service contract upgrade process should be resilient to minor compromise
 and relying on a global master key may be undesirable
 as a single point of failure.
 
 For greater assurance towards customers,
-the front-ends could be made immutable
-in a manner similar to the back-ends.
-When a customer uses a specific frontend to request an entry,
-they could trust that only that frontend
-and its associated backends
+the service contracts could be made immutable
+in a manner similar to the operator contracts.
+When a customer uses a specific service contract to request an entry,
+they could trust that only that service contract
+and its associated operator contracts
 will be involved in the generation of their entry.
 However, this would reduce the ability to maintain
 a global "canonical" chain of entries,
