removed references to simpy

--- a/simulations/Mesa Simulations/Mesa_ABM_of_Random_Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa_ABM_of_Random_Beacon.ipynb
@@ -69,6 +69,7 @@
     "max_malicious_threshold = 40 # % of malicious node ownership needed to sign\n",
     "signature_delay = 2 # lambda for poisson distribution used to generate a delay before the signature is executed\n",
     "group_expiry = 10 # number of steps after which a group expires\n",
+    "Misbehaving_DKG_nodes = 10 # percent of nodes misbehaving during dkg\n",
     "\n",
     "#Node parameters\n",
     "node_failure_percent = 20 # % of times nodes fail and have to reconnect\n",
