--- a/simulations/Mesa Simulations/Study 1.ipynb
+++ b/simulations/Mesa Simulations/Study 1.ipynb
@@ -165,7 +165,7 @@
     "                    if signature.type == \"signature\":\n",
     "                        signature_count+=1\n",
     "                        if signature.dominator_id>=0:\n",
-    "                            dominator_distr[signature.dominator_id] += 1\n",
+    "                            dominator_distr[signature.dominator_id] += 1 #count only if a dominator id has been set\n",
     "            dominator_distributions.append(dominator_distr)\n",
     "            total_dominator_percents.append(round(sum(dominator_distr)/signature_count*100,1))\n",
     "        dominator_distributions_1.append(dominator_distributions)\n",
@@ -316,6 +316,18 @@
     "df.insert(0,'Failure %',node_failure_percent_array)\n",
     "df.set_index('Failure %')\n",
     "df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many are unable to produce a signature?\n",
+    "cannot produce a signature if number of virtual stakers online is < min_honest threshold\n",
+    "dominator is when max owner + failed nodes  > max_malicious (need to change in current)\n",
+    "\n",
+    "move sim to new repo\n",
+    "check if colab can be run on separate infrastructure to google"
    ]
   },
   {
